--- a/src/app/components/Loader.scss
+++ b/src/app/components/Loader.scss
@@ -1,3 +1,20 @@
+.expose {
+  background: rgba(255, 255, 255, .9);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 10001;
+  left: 0;
+  top: 0;
+}
+
+.enabled {
+  display: block;
+}
+.disabled {
+  display: none;
+}
+
 .loader {
   position: absolute;
   left: 50%;
