--- a/src/app/theme/_theme.scss
+++ b/src/app/theme/_theme.scss
@@ -7,7 +7,7 @@ $color-text-secondary: $palette-grey-600;
 
 $color-primary: $palette-brown-600;
 $color-primary-dark: $palette-lime-500;
-$color-accent: $palette-brown-300;
+$color-accent: $palette-light-blue-600;
 $color-accent-dark: $palette-lime-500;
 $color-primary-contrast: $color-dark-contrast;
 $color-accent-contrast: $color-dark-contrast;
